[gd_scene load_steps=2 format=2]

[ext_resource path="res://Levels/ItemsOld/Drop/ItemDrop.gd" type="Script" id=1]

[node name="DroppedCoin" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="dropsounddelay" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="dropsounddelay" to="." method="_on_dropsounddelay_timeout"]
