[gd_scene load_steps=9 format=2]

[ext_resource path="res://Entities/PlayerDetector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Items/Sprites/Coin.png" type="Texture" id=2]
[ext_resource path="res://Levels/ItemsOld/Drop/ItemDrop.gd" type="Script" id=3]
[ext_resource path="res://Items/Audio/coindrop.sfxr" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=4]
resource_name = "spin"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="ItemDrop" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 129
script = ExtResource( 3 )
immortal = true
drop_sound = "res://Items/Audio/coindrop.sfxr"
collect_fx = "res://Items/Audio/coinpickup.sfxr"

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
anims/RESET = SubResource( 3 )
anims/spin = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
attenuation = 9.18957
bus = "Effects"

[node name="dropsounddelay" type="Timer" parent="."]
one_shot = true

[connection signal="player_changed" from="PlayerDetector" to="." method="_on_PlayerDetector_player_changed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
